--- a/admin.html
+++ b/admin.html
@@ -116,11 +116,10 @@
   </div>
 
   <script>
-    // 🔐 Admin Password (Optional)
     const adminPassword = "OBA IS THE KING";
 
-    // 🔗 JSONStorage endpoint (live)
-    const announcementAPI = "https://api.jsonstorage.net/v1/json/87b79bd8-0401-4828-b419-c602c353f5d4/84221936-2b8d-4d88-9427-bbff4fd56da8";
+    // ✅ Your working JSONStorage endpoint:
+    const announcementAPI = "https://api.jsonstorage.net/v1/json/d33236c3-a3da-4c87-8d18-eeeb899d034a/0fcd9550-b411-47b2-b542-b64911a8bb31";
 
     async function postAnnouncement() {
       const title = document.getElementById("announcementTitle").value.trim();
