--- a/admin.html
+++ b/admin.html
@@ -27,12 +27,12 @@
       color: #00B386;
       margin-top: 0;
     }
-    label, input, textarea, button, select {
+    label, input, textarea, button {
       display: block;
       width: 100%;
       margin-bottom: 1rem;
     }
-    input, textarea, select {
+    input, textarea {
       padding: 0.75rem;
       background: #121212;
       color: white;
@@ -75,72 +75,17 @@
     <input type="text" id="eventLocation">
     <button onclick="addEvent()">Add Event</button>
   </div>  <div class="section">
-    <h2>🗓️ Update Timetable</h2>
-    <label>Day:</label>
-    <select id="timetableDay">
-      <option>Monday</option>
-      <option>Tuesday</option>
-      <option>Wednesday</option>
-      <option>Thursday</option>
-      <option>Friday</option>
-    </select>
-    <label>Time:</label>
-    <input type="text" id="timetableTime">
-    <label>Course:</label>
-    <input type="text" id="timetableCourse">
-    <label>Venue:</label>
-    <input type="text" id="timetableVenue">
-    <label>Lecturer:</label>
-    <input type="text" id="timetableLecturer">
-    <button onclick="updateTimetable()">Add to Timetable</button>
-  </div>  <div class="section">
-    <h2>🔍 Lost & Found</h2>
-    <label>Item Name:</label>
-    <input type="text" id="lostItem">
-    <label>Description:</label>
-    <textarea id="lostDescription"></textarea>
-    <label>Location Found:</label>
-    <input type="text" id="lostLocation">
-    <button onclick="addLostItem()">Post Lost Item</button>
-  </div>  <div class="section">
-    <h2>🎂 Add Birthday</h2>
+    <h2>🎂 Add Birthday Wish</h2>
     <label>Student Name:</label>
-    <input type="text" id="birthdayName">
-    <label>Date of Birth:</label>
-    <input type="date" id="birthdayDate">
-    <label>Birthday Message (optional):</label>
-    <textarea id="birthdayMessage"></textarea>
-    <button onclick="addBirthday()">Post Birthday</button>
+    <input type="text" id="bdayName">
+    <label>Birthday Message:</label>
+    <textarea id="bdayMessage"></textarea>
+    <button onclick="addBirthday()">Post Birthday Wish</button>
   </div>  <script>
-    const adminPassword = "OBA IS THE KING";
-
-    const announcementAPI = "https://api.jsonstorage.net/v1/json/d33236c3-a3da-4c87-8d18-eeeb899d034a/0fcd9550-b411-47b2-b542-b64911a8bb31";
     const birthdayAPI = "https://api.jsonstorage.net/v1/json/d33236c3-a3da-4c87-8d18-eeeb899d034a/f8f949fe-792a-45c4-b45a-97592828f554";
 
-    async function postAnnouncement() {
-      const title = document.getElementById("announcementTitle").value.trim();
-      const message = document.getElementById("announcementBody").value.trim();
-      if (!title || !message) {
-        alert("❗ Please fill in all fields.");
-        return;
-      }
-      const newData = { title, message, date: new Date().toLocaleString() };
-      try {
-        let existing = await fetch(announcementAPI);
-        let data = await existing.json();
-        data.push(newData);
-        await fetch(announcementAPI, {
-          method: 'PUT',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify(data)
-        });
-        alert("✅ Announcement posted successfully!");
-        document.getElementById("announcementTitle").value = "";
-        document.getElementById("announcementBody").value = "";
-      } catch (err) {
-        alert("❌ Failed to post announcement. Please check your API link.");
-        console.error(err);
-      }
+    function postAnnouncement() {
+      alert("📢 Announcement Posted (simulation)");
     }
 
     function addExecutive() {
@@ -151,43 +96,31 @@
       alert("📅 Event Added (simulation)");
     }
 
-    function updateTimetable() {
-      alert("📘 Timetable Updated (simulation)");
-    }
-
-    function addLostItem() {
-      alert("🔍 Lost item posted (simulation)");
-    }
-
     async function addBirthday() {
-      const name = document.getElementById("birthdayName").value.trim();
-      const date = document.getElementById("birthdayDate").value;
-      const message = document.getElementById("birthdayMessage").value.trim();
-      if (!name || !date) {
-        alert("❗ Name and Date are required.");
+      const name = document.getElementById("bdayName").value.trim();
+      const message = document.getElementById("bdayMessage").value.trim();
+
+      if (!name || !message) {
+        alert("Please fill out both name and message.");
         return;
       }
-      const newEntry = {
-        name,
-        date,
-        message,
-        addedOn: new Date().toLocaleString()
-      };
+
       try {
-        let res = await fetch(birthdayAPI);
-        let data = await res.json();
-        data.push(newEntry);
+        const res = await fetch(birthdayAPI);
+        const current = await res.json();
+        current.unshift({ name, message });
+
         await fetch(birthdayAPI, {
-          method: 'PUT',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify(data)
+          method: "PUT",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify(current)
         });
-        alert("🎉 Birthday added successfully!");
-        document.getElementById("birthdayName").value = "";
-        document.getElementById("birthdayDate").value = "";
-        document.getElementById("birthdayMessage").value = "";
+
+        alert("🎉 Birthday Wish Posted!");
+        document.getElementById("bdayName").value = "";
+        document.getElementById("bdayMessage").value = "";
       } catch (err) {
-        alert("❌ Failed to save birthday.");
+        alert("❌ Failed to post birthday wish.");
         console.error(err);
       }
     }
